# flappy-trainer

./: .env  .env.sample  .flake8  .gitignore  README.md  pyproject.toml
flappy_trainer/: config.py  game_manager.py  main.py  utils.py
flappy_trainer/ai/: ai_trainer.py  ai_utils.py  environment_state.py  experience.py  game_state.py  knowledge.py  main.py  reinforcement_learning_agent.py  summary.md  training_curricula.yaml
flappy_trainer/ai/models/: existing_model.keras  flappy_trainer_model.keras
flappy_trainer/game_managers/: base_game_manager.py  game_manager.py
flappy_trainer/game_menus/: pause_menu.py  start_menu.py
flappy_trainer/game_objects/: base_bird.py  bird.py  pipe.py
flappy_trainer/game_objects/bird/: bird.py  bird_base.py  bird_spritesheet.py
flappy_trainer/game_objects/pipe/: pipe.py  pipe_base.py  pipe_spritesheet.py
tests/: test_ai_utils.py  test_bird.py  test_env_state.py  test_game_manager.py  test_pipe.py
