[tool.poetry]
name = "flappy-trainer"
version = "0.1.0"
description = "An AI-powered Flappy Bird game where an agent learns to play using reinforcement learning with TensorFlow."
authors = ["EPortman <ethan.portman@gov.bc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.6.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
